fixed overlay being visible while playing

--- a/overlay/src/styles.css
+++ b/overlay/src/styles.css
@@ -6,15 +6,6 @@ window {
 
 revealer {
 	padding: 0 2rem;
-	margin: 0 4rem;
-}
-
-revealer.top {
-	padding-bottom: 1px;
-}
-
-revealer.bottom {
-	padding-top: 1px;
 }
 
 image {
@@ -23,20 +14,22 @@ image {
 
 .container {
 	background: #222;
-	border-radius: 3rem;
 	box-shadow: 0 -0.5rem 1.5rem #222;
 	color: white;
+	padding: 1rem;
 }
 
 .container.top {
-	margin-top: -3rem;
-	padding: 4rem 1.5rem 1rem 1.5rem;
+	border-bottom-left-radius: 3rem;
+	border-bottom-right-radius: 3rem;
+	margin-bottom: 1.5rem;
 }
 
 .container.bottom {
-	margin-bottom: -3rem;
-	padding: 1rem 1.5rem 4rem 1.5rem;
+	border-top-left-radius: 3rem;
+	border-top-right-radius: 3rem;
 	font-size: 7rem;
+	margin-top: 1.5rem;
 }
 
 .title {
